# geometry-client-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
cmake/: FindGRPC.cmake  FindProtobuf.cmake
geometry/: CMakeLists.txt
geometry-test/: CMakeLists.txt  main.cpp
proto/: geometry_operators.proto
proto/epl/grpc/: geometry_operators.proto
proto/epl/protobuf/: geometry.proto
protos/: geometry_operators.proto
